@@ -34,16 +34,16 @@ $saveOrder	= $listOrder == 'ordering';
 				<option value=""><?php echo JText::_('JOPTION_SELECT_PUBLISHED');?></option>
 				<?php echo JHtml::_('select.options', PluginsHelper::stateOptions(), 'value', 'text', $this->state->get('filter.state'), true);?>
 			</select>
-            
+            <select name="filter_folder" class="inputbox" onchange="this.form.submit()">
+				<option value=""><?php echo JText::_('COM_PLUGINS_OPTION_FOLDER');?></option>
+				<?php echo JHtml::_('select.options', PluginsHelper::folderOptions(), 'value', 'text', $this->state->get('filter.folder'));?>
+			</select>
             <select name="filter_access" class="inputbox" onchange="this.form.submit()">
 				<option value=""><?php echo JText::_('JOPTION_SELECT_ACCESS');?></option>
 				<?php echo JHtml::_('select.options', JHtml::_('access.assetgroups'), 'value', 'text', $this->state->get('filter.access'));?>
 			</select>
 
-			<select name="filter_folder" class="inputbox" onchange="this.form.submit()">
-				<option value=""><?php echo JText::_('COM_PLUGINS_OPTION_FOLDER');?></option>
-				<?php echo JHtml::_('select.options', PluginsHelper::folderOptions(), 'value', 'text', $this->state->get('filter.folder'));?>
-			</select>
+			
 		</div>
 	</fieldset>
 	<div class="clr"> </div>
@@ -66,14 +66,15 @@ $saveOrder	= $listOrder == 'ordering';
 						<?php echo JHtml::_('grid.order',  $this->items, 'filesave.png', 'plugins.saveorder'); ?>
 					<?php endif; ?>
 				</th>
-				<th width="5%">
-					<?php echo JHtml::_('grid.sort', 'JGrid_Heading_Access', 'access', $listDirn, $listOrder); ?>
-				</th>
+				
 				<th class="nowrap" width="10%">
 					<?php echo JHTML::_('grid.sort', 'COM_PLUGINS_FOLDER_HEADING', 'folder', $listDirn, $listOrder); ?>
 				</th>
 				<th class="nowrap" width="10%">
 					<?php echo JHTML::_('grid.sort', 'COM_PLUGINS_ELEMENT_HEADING', 'element', $listDirn, $listOrder); ?>
+				</th>
+                <th width="5%">
+					<?php echo JHtml::_('grid.sort', 'JGrid_Heading_Access', 'access', $listDirn, $listOrder); ?>
 				</th>
 				<th class="nowrap" width="1%">
 					<?php echo JHtml::_('grid.sort', 'JGRID_HEADING_ID', 'extension_id', $listDirn, $listOrder); ?>
@@ -129,14 +130,15 @@ $saveOrder	= $listOrder == 'ordering';
 						<?php echo $item->ordering; ?>
 					<?php  endif; ?>
 				</td>
-				<td class="center">
-					<?php echo $this->escape($item->access_level); ?>
-				</td>
+				
 				<td class="nowrap center">
 					<?php echo $this->escape($item->folder);?>
 				</td>
 				<td class="nowrap center">
 					<?php echo $this->escape($item->element);?>
+				</td>
+                <td class="center">
+					<?php echo $this->escape($item->access_level); ?>
 				</td>
 				<td class="center">
 					<?php echo (int) $item->extension_id;?>
