@@ -39,7 +39,13 @@ $saveOrder	= $listOrder == 'ordering';
 				<option value=""><?php echo JText::_('JGLOBAL_FILTER_CLIENT');?></option>
 				<?php echo JHtml::_('select.options', ModulesHelper::getClientOptions(), 'value', 'text', $this->state->get('filter.client_id'));?>
 			</select>
-            
+            <label class="selectlabel" for="filter_state">
+				<?php echo JText::_('JOPTION_SELECT_PUBLISHED'); ?>
+			</label>
+			<select name="filter_state" id="filter_state" class="inputbox">
+				<option value=""><?php echo JText::_('JOPTION_SELECT_PUBLISHED');?></option>
+				<?php echo JHtml::_('select.options', ModulesHelper::getStateOptions(), 'value', 'text', $this->state->get('filter.state'));?>
+			</select>
             <label class="selectlabel" for="filter_position">
 				<?php echo JText::_('COM_MODULES_OPTION_SELECT_POSITION'); ?>
 			</label>
@@ -55,13 +61,7 @@ $saveOrder	= $listOrder == 'ordering';
 				<option value=""><?php echo JText::_('COM_MODULES_OPTION_SELECT_MODULE');?></option>
 				<?php echo JHtml::_('select.options', ModulesHelper::getModules($this->state->get('filter.client_id')), 'value', 'text', $this->state->get('filter.module'));?>
 			</select>
-			<label class="selectlabel" for="filter_state">
-				<?php echo JText::_('JOPTION_SELECT_PUBLISHED'); ?>
-			</label>
-			<select name="filter_state" id="filter_state" class="inputbox">
-				<option value=""><?php echo JText::_('JOPTION_SELECT_PUBLISHED');?></option>
-				<?php echo JHtml::_('select.options', ModulesHelper::getStateOptions(), 'value', 'text', $this->state->get('filter.state'));?>
-			</select>
+			
 
 			<label class="selectlabel" for="filter_access">
 				<?php echo JText::_('JOPTION_SELECT_ACCESS'); ?>
@@ -94,28 +94,28 @@ $saveOrder	= $listOrder == 'ordering';
 				</th>
 				<th class="title">
 					<?php echo JHtml::_('grid.sort', 'JGLOBAL_TITLE', 'title', $listDirn, $listOrder); ?>
-				</th>
+				</th>                
 				<th class="width-5">
 					<?php echo JHtml::_('grid.sort',  'JCLIENT', 'client_id', $listDirn, $listOrder); ?>
+				</th>
+                <th class="width-5">
+					<?php echo JHtml::_('grid.sort', 'JPUBLISHED', 'published', $listDirn, $listOrder); ?>
 				</th>
 				<th class="width-15">
 					<?php echo JHtml::_('grid.sort',  'COM_MODULES_HEADING_POSITION', 'position', $listDirn, $listOrder); ?>
 				</th>
-				<th class="width-10">
-					<?php echo JHtml::_('grid.sort',  'COM_MODULES_HEADING_PAGES', 'pages', $listDirn, $listOrder); ?>
-				</th>
-				<th class="width-10">
-					<?php echo JHtml::_('grid.sort', 'COM_MODULES_HEADING_MODULE', 'name', $listDirn, $listOrder); ?>
-				</th>
-				<th class="width-5">
-					<?php echo JHtml::_('grid.sort', 'JPUBLISHED', 'published', $listDirn, $listOrder); ?>
-				</th>
-				<th class="nowrap ordering-col">
+                <th class="nowrap ordering-col">
 					<?php echo JHtml::_('grid.sort', 'JGRID_HEADING_ORDERING', 'ordering', $listDirn, $listOrder); ?>
 					<?php if ($canOrder && $saveOrder) :?>
 						<?php echo JHtml::_('grid.order',  $this->items, 'filesave.png', 'modules.saveorder'); ?>
 					<?php endif; ?>
+				</th>				
+				<th class="width-10">
+					<?php echo JHtml::_('grid.sort', 'COM_MODULES_HEADING_MODULE', 'name', $listDirn, $listOrder); ?>
 				</th>
+                	<th class="width-10">
+					<?php echo JHtml::_('grid.sort',  'COM_MODULES_HEADING_PAGES', 'pages', $listDirn, $listOrder); ?>
+				</th>		
 				<th class="title access-col">
 					<?php echo JHtml::_('grid.sort', 'JGRID_HEADING_ACCESS', 'access', $listDirn, $listOrder); ?>
 				</th>
@@ -158,19 +158,13 @@ $saveOrder	= $listOrder == 'ordering';
 				<td class="center">
 					<?php echo $item->client_id == 0 ? JText::_('JSITE') : JText::_('JADMINISTRATOR'); ?>
 				</td>
+                <td class="center">
+					<?php echo JHtml::_('jgrid.published', $item->published, $i, 'modules.', $canChange);?>
+				</td>
 				<td class="center">
 					<?php echo $item->position; ?>
 				</td>
-				<td class="center">
-					<?php echo $item->pages; ?>
-				</td>
-				<td class="left">
-					<?php echo $item->name;?>
-				</td>
-				<td class="center">
-					<?php echo JHtml::_('jgrid.published', $item->published, $i, 'modules.', $canChange);?>
-				</td>
-				<td class="order">
+                <td class="order">
 					<?php if ($canChange) : ?>
 						<?php if ($saveOrder) :?>
 							<?php if ($listDirn == 'asc') : ?>
@@ -187,6 +181,13 @@ $saveOrder	= $listOrder == 'ordering';
 						<?php echo $item->ordering; ?>
 					<?php endif; ?>
 				</td>
+                <td class="left">
+					<?php echo $item->name;?>
+				</td>
+				<td class="center">
+					<?php echo $item->pages; ?>
+				</td>			
+							
 				<td class="center">
 					<?php echo $this->escape($item->access_level); ?>
 				</td>
